COmmit final